--- a/bin/pip3.9
+++ b/bin/pip3.9
@@ -1,4 +1,4 @@
-#!/Users/oliviali/Development/legal-search/bin/python3.9
+#!/Users/oliviali/Development/legal-search/bin/python3
 # -*- coding: utf-8 -*-
 import re
 import sys
